# haskell-programming-excercises

Chapter.10/combine/: Main.hs
Chapter.10/database/: Main.hs
Chapter.10/factorial/: Main.hs
Chapter.11/: Main.hs  tooMany.hs  vehicles.hs
Chapter.11/BinaryTree/: Main  Main.hs
Chapter.11/Ciphers/: Main.hs
Chapter.11/hutton/: Main.hs
Chapter.11/phone/: Main.hs
Chapter.12/: Main.hs
Chapter.12/binary-tree/: Main.hs
Chapter.12/either/: Main.hs
Chapter.12/maybe/: Main.hs
Chapter.12/naturals/: Main.hs
Chapter.12/unfolds/: Main.hs
Chapter.13/hangman/: hangman.cabal
Chapter.13/hangman/src/: Main.hs
Chapter.13/hello/: hello.cabal  stack.yaml
Chapter.13/hello/src/: Hello.hs
Chapter.13/palindrome/: Main.hs
Chapter.13/person/: Main.hs
Chapter.14/addition/: Addition.hs  addition.cabal
Chapter.14/coarbitrary/: .gitignore  ChangeLog.md  README.md  package.yaml
Chapter.14/coarbitrary/app/: Main.hs
Chapter.14/morse/: morsecode.cabal
Chapter.14/morse/app/: Main.hs
Chapter.14/morse/src/: Morse.hs
Chapter.15/exercises/: exercises.cabal
Chapter.15/exercises/app/: Main.hs
Chapter.15/first/: first.cabal
Chapter.15/first.bak/: LICENSE  README.md  firstMonoid.cabal
Chapter.15/first.bak/test/: Spec.hs
Chapter.15/first/src/: Lib.hs
Chapter.15/first/test/: Spec.hs
Chapter.15/madlib/: Main  Main.hs
Chapter.15/optional/: LICENSE  Optional.cabal  README.md
Chapter.15/optional/src/: Optional.hs
Chapter.15/optional/test/: OptionalSpec.hs
Chapter.16/ex10/: ex10.cabal
Chapter.16/ex10/app/: Main.hs
Chapter.17/applicative-laws/: README.md  applicative-laws.cabal  stack.yaml
Chapter.17/applicative-laws/src/: Lib.hs
Chapter.17/applicative-laws/test/: Spec.hs
Chapter.17/identity/: identity.cabal
Chapter.17/identity/src/: Lib.hs
Chapter.18/monad-laws/: README.md  monad-laws.cabal  stack.yaml
Chapter.18/monad-laws/src/: Lib.hs
Chapter.18/monad-laws/test/: Spec.hs
Chapter.7/: Main.hs  arith4.hs
Chapter.9/: Main.hs
Chapter.9/caesar/: Main.hs
fizz-buzz/: Main.hs
