name:                exercises
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/leeor/exercises#readme
license:             BSD3
license-file:        LICENSE
author:              Leeor Aharon
maintainer:          leeor.aharon@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable exercises-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/leeor/exercises
