name:                Optional
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/leeor/Optional#readme
license:             BSD3
license-file:        LICENSE
author:              Leeor Aharon
maintainer:          leeor.aharon@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Optional
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite Optional-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             OptionalSpec.hs
  build-depends:       base
                     , Optional
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/leeor/Optional
